packages/gumicorn/gumicorn-23.0.0.tar.gz/gumicorn-23.0.0/tests/requests/invalid/001.py
from gumicorn.http.errors import NoMoreData
request = NoMoreData